Hide second hero text

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -25,7 +25,7 @@ title: The Linear Isomorphic Keybaord
   </div>
   <div class="keyboard-space"></div>
   <div class="col-12 hero__text-space js-second-hero-text-area">
-    <div id="second-hero-text" class="hero__text graphit-xl-regular js-second-hero-text">
+    <div id="second-hero-text" class="hero__text graphit-xl-regular js-second-hero-text is-hidden">
       This is the<br><span class="graphit-xl-bold">Linear Isomorphic Keyboard</span>
     </div>
   </div>
