--- a/source/stylesheets/custom/_index.css.scss
+++ b/source/stylesheets/custom/_index.css.scss
@@ -1,6 +1,6 @@
 body.index {
   .hero {
-    background-color: #5f5f5f;
+    background-color: $color-gray;
   }
   .hero__text-space {
     position: relative;
@@ -18,6 +18,10 @@ body.index {
     margin: 0 auto;
     bottom: 1rem;
     opacity: 0;
+  }
+
+  .hero__text.is-hidden {
+    color: $color-gray;
   }
 
   .summary-section {
