Fix footer link

--- a/source/partials/_footer.html.erb
+++ b/source/partials/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="container footer graphit-xs-regular">
   <div>
-    The <span class="emphasis">Linear Isomorphic Keyboard</span> by <a href="markjanzer.io">Mark Janzer</a>
+    The <span class="emphasis">Linear Isomorphic Keyboard</span> by <a href="https://markjanzer.com/">Mark Janzer</a>
   </div>
   <div class="footer-date"></div>
 </footer>
