Add h1 to the homepage

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -16,17 +16,18 @@ title: The Linear Isomorphic Keybaord
   <div class="container">
     <div class="row">
       <div class="col-12 hero__text-space js-first-hero-text">
-        <div class="hero__text graphit-xl-regular fadeInUp">
+        <p class="hero__text graphit-xl-regular fadeInUp">
           <br>
           Is there a better way to design the piano?
-        </div>
+        </p>
       </div>
     </div>
   </div>
   <div class="keyboard-space"></div>
   <div class="col-12 hero__text-space js-second-hero-text-area">
     <div id="second-hero-text" class="hero__text graphit-xl-regular js-second-hero-text is-hidden">
-      This is the<br><span class="graphit-xl-bold">Linear Isomorphic Keyboard</span>
+      <p>This is the</p>
+      <h1 class="graphit-xl-bold">Linear Isomorphic Keyboard</h1>
     </div>
   </div>
   <div class="keyboard-container">
