Wrap the description in p tags

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -42,9 +42,9 @@ title: The Linear Isomorphic Keybaord
   </div>
   <div class="row">
     <div class="col-sm-12 col-lg-10 summary__text graphit-xl-regular">
-      I am exploring how the Linear Isomorphic Keyboard (LIK) compares to the Traditional Keyboard (TK).
+      <p>I am exploring how the Linear Isomorphic Keyboard (LIK) compares to the Traditional Keyboard (TK).</p>
+      <p>I am practicing both keyboards for the same amount of time, playing the same exercises, and recording everything.</p>
     </div>
-    <div class="col-sm-12 col-lg-10 summary__text graphit-xl-regular">I am practicing both keyboards for the same amount of time, playing the same exercises, and recording everything.</div>
   </div>
 </div>
 
